# testpervolare

./: .gitignore  Dockerfile  Pipfile  Prueba técnica 2.docx  coverage.rc  database.db  docker-compose.yml  readme.md  readme.txt  ~$ueba técnica 2.docx
.github/workflows/: test.yml  workflow.yml
backend/: .gitignore  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.debug.yml  docker-compose.yml  init.sh  prestart.sh  pyproject.toml  requirements.txt  start.sh
backend/app/: Pipfile  auth.py  config.py  createpopulate.py  fake.py  imp_modules.py  main.py  readme.md  tools.py  wait_for_it.sh
backend/app/modules/: __init__.py
backend/app/modules/Atributo/: controller.py  model.py  routes.py
backend/app/modules/Login/: __init__.py  controller.py  model.py  routes.py
backend/app/modules/Producto/: controller.py  model.py  routes.py
backend/app/modules/User/: controller.py  model.py  routes.py
backend/app/modules/default/: routes.py
backend/requirements/: doc.pip  install.pip  test.pip
backend/scripts/: lint.sh
backend/tests/: test_tools.py  utils.py
database/: Dockerfile
database/init/: 01.sql
frontend/: Dockerfile  nginx.conf
frontend/product/: index.html  package.json  pnpm-lock.yaml
frontend/product/src/: App.vue  main.js
frontend/product/src/components/: HelloWorld.vue  footer.vue  navbar.vue
frontend/product/src/plugins/: vuetify.js
frontend/product/src/router/: index.js
frontend/product/src/views/: Home.vue  Products.vue  signin.vue  signup.vue
