[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
description = "App to test fastapi mixing with mysql"
readme = "README.md"
requires-python = ">=3.8"
license = "gpl-3.0"
authors = [
    { name = "Sebastián López", email = "selobu@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "anyio==3.6.2",
    "click==8.1.3",
    "colorama==0.4.6",
    "dnspython==2.2.1",
    "email-validator==1.3.0",
    "fastapi==0.87.0",
    "greenlet==2.0.1",
    "gunicorn==20.1.0",
    "h11==0.14.0",
    "httptools==0.5.0",
    "idna==3.4",
    "pydantic[email]==1.10.2",
    "pymysql==1.0.2",
    "python-dotenv==0.21.0",
    "python-multipart==0.0.5",
    "pyyaml==6.0",
    "six==1.16.0",
    "sniffio==1.3.0",
    "sqlalchemy2-stubs==0.0.2a29",
    "sqlalchemy==1.4.41",
    "sqlmodel==0.0.8",
    "starlette==0.21.0",
    "typing-extensions==4.4.0",
    "uvicorn[standard]==0.20.0",
    "watchfiles==0.18.1",
    "websockets==10.4"
    ]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/selobu/testpervolare"
Documentation = "https://gestionhseq.com"

[project.optional-dependencies]
test = [
    "pytest >=7.1.3,<8.0.0",
    "coverage[toml] >= 6.5.0,<7.0",
    "mypy ==0.982",
    "ruff ==0.0.138",
    "black == 22.10.0",
    "isort >=5.0.6,<6.0.0",
    "httpx >=0.23.0,<0.24.0",
    "email_validator >=1.1.1,<2.0.0",
    # TODO: once removing databases from tutorial, upgrade SQLAlchemy
    # probably when including SQLModel
    "sqlalchemy >=1.3.18,<=1.4.41",
    "peewee >=3.13.3,<4.0.0",
    "databases[sqlite] >=0.3.2,<0.7.0",
    "orjson >=3.2.1,<4.0.0",
    "ujson >=4.0.1,!=4.0.2,!=4.1.0,!=4.2.0,!=4.3.0,!=5.0.0,!=5.1.0,<6.0.0",
    "python-multipart >=0.0.5,<0.0.6",
    "flask >=1.1.2,<3.0.0",
    "anyio[trio] >=3.2.1,<4.0.0",
    "python-jose[cryptography] >=3.3.0,<4.0.0",
    "pyyaml >=5.3.1,<7.0.0",
    "passlib[bcrypt] >=1.7.2,<2.0.0",
    "fastapi==0.87.0",

    # types
    "types-ujson ==5.5.0",
    "types-orjson ==3.6.2",
]
doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=8.1.4,<9.0.0",
    "mdx-include >=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin >=0.1.7,<0.3.0",
    # TODO: upgrade and enable typer-cli once it supports Click 8.x.x
    # "typer-cli >=0.0.12,<0.0.13",
    "typer[all] >=0.6.1,<0.8.0",
    "pyyaml >=5.3.1,<7.0.0",
]
dev = [
    "ruff ==0.0.138",
    "uvicorn[standard] >=0.12.0,<0.19.0",
    "pre-commit >=2.17.0,<3.0.0",
]
all = [
    "httpx >=0.23.0",
    "jinja2 >=2.11.2",
    "python-multipart >=0.0.5",
    "itsdangerous >=1.1.0",
    "pyyaml >=5.3.1",
    "ujson >=4.0.1,!=4.0.2,!=4.1.0,!=4.2.0,!=4.3.0,!=5.0.0,!=5.1.0",
    "orjson >=3.2.1",
    "email_validator >=1.1.1",
    "uvicorn[standard] >=0.12.0",
]

[tool.hatch.version]
path = "app/main.py"

[tool.isort]
profile = "black"
known_third_party = ["app", "fastapi", "pydantic", "starlette"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "app.concurrency"
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"
filterwarnings = [
    "error",
    # TODO: needed by asyncio in Python 3.9.7 https://bugs.python.org/issue45097, try to remove on 3.9.8
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
    'ignore:starlette.middleware.wsgi is deprecated and will be removed in a future release\..*:DeprecationWarning:starlette',
    # TODO: remove after upgrading HTTPX to a version newer than 0.23.0
    # Including PR: https://github.com/encode/httpx/pull/2309
    "ignore:'cgi' is deprecated:DeprecationWarning",
    # For passlib
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
    # see https://trio.readthedocs.io/en/stable/history.html#trio-0-22-0-2022-09-28
    "ignore:You seem to already have a custom.*:RuntimeWarning:trio",
    "ignore::trio.TrioDeprecationWarning",
    # TODO remove pytest-cov
    'ignore::pytest.PytestDeprecationWarning:pytest_cov',
]

[tool.coverage.run]
parallel = true
source = [
    "tests",
]
context = '${CONTEXT}'

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-third-party = ["app","fastapi", "pydantic", "starlette"]